# encfsmp-cli

./: .gitignore  CMakeLists.txt  README-WINDOWS.md  build-windows.bat
.github/workflows/: build.yml
encfsmp-src/: CMakeLists.txt  config.h  efs_config.h  fs_layer.cpp  fs_layer.h  portability.cpp  portability.h
src/: encfsmp_cli.cpp
